--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "2captcha",
-    "version": "1.0.11",
+    "name": "@jnv/2captcha",
+    "version": "2.0.0",
     "description": "A wrapper for the 2Captcha API",
     "main": "index.js",
     "scripts": {
@@ -13,6 +13,6 @@
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Sander-Kastelein/2captcha.git"
+        "url": "https://github.com/jnv/2captcha.git"
     }
 }
